fix(dropdown): text visibility fix (#568)
* fix(dropdown): text visibility fix

* chore: removed class css not required

--- a/src/components/reusable/dropdown/dropdownOption.scss
+++ b/src/components/reusable/dropdown/dropdownOption.scss
@@ -7,7 +7,7 @@
 
 .option {
   cursor: default;
-  padding: 8px 16px;
+  padding: 16px;
   height: 48px;
   transition: background-color 150ms ease-out;
   display: flex;
@@ -34,6 +34,7 @@
 
   slot[name='icon']::slotted(span) {
     display: flex;
+    padding: 0.5rem 0.5rem 0.5rem 0;
   }
 }
 
